--- a/requirements.txt
+++ b/requirements.txt
@@ -2,67 +2,39 @@ absl-py==2.4.0
 albucore==0.0.24
 albumentations==2.0.8
 annotated-types==0.7.0
-astunparse==1.6.3
-beautifulsoup4==4.14.3
-blinker==1.9.0
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.1
-colorama==0.4.6
 coloredlogs==15.0.1
 contourpy==1.3.3
 cycler==0.12.1
 Cython==3.2.4
-deepface==0.0.98
 easydict==1.13
 filelock==3.20.3
-fire==0.7.1
-Flask==3.1.2
-flask-cors==6.0.2
 flatbuffers==25.12.19
 fonttools==4.61.1
 fsspec==2026.1.0
-gast==0.7.0
-gdown==5.2.1
-google-pasta==0.2.0
-grpcio==1.76.0
-gunicorn==24.1.1
-h5py==3.15.1
 humanfriendly==10.0
 idna==3.11
 ImageIO==2.37.2
 insightface==0.7.3
-itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.3
-keras==3.13.2
 kiwisolver==1.4.9
 lazy_loader==0.4
-libclang==18.1.1
-lightdsa==0.0.3
-lightecc==0.0.4
-lightphe==0.0.20
-lz4==4.4.5
-Markdown==3.10.1
-markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.8
-mdurl==0.1.2
-mediapipe==0.10.30
+mediapipe==0.10.32
 ml_dtypes==0.5.4
 mpmath==1.3.0
-mtcnn==1.0.0
-namex==0.1.0
 networkx==3.6.1
-numpy==2.4.1
+numpy==2.4.2
 onnx==1.20.1
 onnxruntime==1.23.2
 opencv-contrib-python==4.13.0.90
-opt_einsum==3.4.0
-optree==0.18.0
+opencv-python==4.13.0.90
+opencv-python-headless==4.13.0.90
 packaging==26.0
-pandas==3.0.0
 pillow==12.1.0
 polars==1.37.1
 polars-runtime-32==1.37.1
@@ -72,16 +44,10 @@ psutil==7.2.2
 pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
-Pygments==2.19.2
 pyparsing==3.3.2
-pyreadline3==3.5.4
-PySocks==1.7.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
 PyYAML==6.0.3
 requests==2.32.5
-retina-face==0.0.17
-rich==14.3.1
 scikit-image==0.26.0
 scikit-learn==1.8.0
 scipy==1.17.0
@@ -89,15 +55,8 @@ setuptools==80.10.2
 simsimd==6.5.12
 six==1.17.0
 sounddevice==0.5.5
-soupsieve==2.8.3
-sqlite-vec==0.1.6
 stringzilla==4.6.0
 sympy==1.14.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-termcolor==3.3.0
-tf_keras==2.20.1
 threadpoolctl==3.6.0
 tifffile==2026.1.28
 torch==2.10.0
@@ -105,11 +64,7 @@ torchvision==0.25.0
 tqdm==4.67.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.3
 ultralytics==8.4.9
 ultralytics-thop==2.0.18
 urllib3==2.6.3
 wcwidth==0.5.3
-Werkzeug==3.1.5
-wheel==0.46.3
-wrapt==2.0.1
